--- a/src/templete/index.html
+++ b/src/templete/index.html
@@ -11,6 +11,7 @@
 <body>
   <h1>Hello World!</h1>
   <img src="<%= require('../image/icon.jpg') %>" alt="">
+  <img src="<%= require('../image/thumb.png') %>" alt="">
 </body>
 
 </html>
